Fix input hover animation in dark mode on chrome
do not enlarge hovered inputs more in dark mode than in light mode,
this is probably a firefox-only issue

--- a/styles/darkmode.css
+++ b/styles/darkmode.css
@@ -24,13 +24,6 @@ body {
 
 input {
   accent-color: rebeccapurple;
-
-  /* if hover is available */
-  @media not all and (hover: none) {
-    &:enabled:hover {
-      transform: scale(1.3);
-    }
-  }
 }
 select {
   background-color: #262626;
